--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.5.2",
     "react-oidc-context": "^3.3.0",
     "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3",
     "shadcn-ui": "^0.9.5"
   },
   "devDependencies": {
